--- a/Servicios/css/tallercss1.css
+++ b/Servicios/css/tallercss1.css
@@ -80,18 +80,26 @@ footer{
     border-style: solid;
     border-width: 5px;
     border-color: rgb(100,100,200);
-    height: 150;
-    
+	
 }
 
-#footerText{
-    text-align: justify;
-    width: 400px;
+footer::after{
+	content: "";
+	clear: both;
+    display: table;
 }
-#foot{
-    float: right;
-    width: 100px;
-    height: 100px;
-    
+
+#footerTextContainer{
+	display: inline-block;
+	text-align: left;
+	text-align: justify;
+	width: 600px;
+	
+	
+}
+#footerImage{
+	height: 10%;
+	width: 10%;
+	float: right;
 }
 
