--- a/Servicios/css/tallercss1.css
+++ b/Servicios/css/tallercss1.css
@@ -63,11 +63,11 @@ tr:nth-child(odd) {
 }
 
 .tooltip {
-    position: relative;
-    
+	position: relative;
+	
+	
 }
-
-.tooltip .tooltiptext {
+li > span{
 	visibility: hidden;
 	background-color: rgb(100,100,200);
 	color: #fff;
@@ -79,7 +79,7 @@ tr:nth-child(odd) {
 
 }
 
-.tooltip .tooltiptext::after {
+li span::after {
     content: "";
     position: absolute;
     top: 50%;
@@ -91,8 +91,9 @@ tr:nth-child(odd) {
 }
 
 
-.tooltip:hover .tooltiptext {
-    visibility: visible;
+.tooltip:hover span {
+	visibility: visible;
+	
 }
 
 
