--- a/Servicios/css/tallercss1.css
+++ b/Servicios/css/tallercss1.css
@@ -102,14 +102,31 @@ nav {
     background-color: rgb(100,220,220);
     border-style: solid;
     border-width: 5px;
-    border-color: rgb(100,100,200);
+	border-color: rgb(100,100,200);
+	overflow: hidden;
 
 }
-nav:hover{
+nav > ul{
+	list-style-type: none;
+	margin: 0;
+    padding: 0;
+}
+
+nav > ul > li{
+	float: left;
+}
+nav > ul > li > a{
+	display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav > ul > li:hover{
     background-color: #c8f7ed;
 }
 
-li :active{
+li > a:active{
     font-weight: bold;
     background-color:  rgb(200,120,120);
 }
