--- a/css/calendar.css
+++ b/css/calendar.css
@@ -1,107 +1,199 @@
-/*calendar css*/
-
-.container * {
-	box-sizing: border-box;
+table.calendar {
+    -webkit-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
+    -ms-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
+    -o-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
+    border-spacing: 0;
+    margin: 2em auto;
+    position: relative;
+    width: 239px;
 }
 
-.container {
-	width: 25%;
-
-	float: right;
+table.calendar:before {
+    -webkit-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
+    -ms-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
+    -o-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
+    position: absolute;
+    top: 0px;
+    left: 2px;
+    background: #ffffff;
+    content: " ";
+    display: block;
+    height: 230px;
+    width: 236px;
+    z-index: -1;
 }
 
-.container > ul {
-	width: 50%;
+table.calendar:after {
+    -webkit-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
+    -ms-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
+    -o-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
+    position: absolute;
+    top: 2px;
+    left: 4px;
+    background: #ffffff;
+    content: " ";
+    display: block;
+    height: 230px;
+    width: 232px;
+    z-index: -2;
 }
 
-.calendar-base {
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  background-color: white;
-  color: black;
+table.calendar thead th {
+    -webkit-border-radius: 1px;
+    -moz-border-radius: 1px;
+    -ms-border-radius: 1px;
+    -o-border-radius: 1px;
+    border-radius: 1px;
+    -webkit-box-shadow: inset 0 1px 0 0 #e88486;
+    -moz-box-shadow: inset 0 1px 0 0 #e88486;
+    -ms-box-shadow: inset 0 1px 0 0 #e88486;
+    -o-box-shadow: inset 0 1px 0 0 #e88486;
+    box-shadow: inset 0 1px 0 0 #e88486;
+    background-color: #e56568;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e56568), color-stop(100%, #bd3f41));
+    background-image: -webkit-linear-gradient(top, #e56568, #bd3f41);
+    background-image: -moz-linear-gradient(top, #e56568, #bd3f41);
+    background-image: -ms-linear-gradient(top, #e56568, #bd3f41);
+    background-image: -o-linear-gradient(top, #e56568, #bd3f41);
+    background-image: linear-gradient(top, #e56568, #bd3f41);
+    border-bottom: 1px solid #ac2826;
+    border-top: 1px solid #ac2826;
+    color: white;
+    font-size: 13pt;
+    font-weight: bold;
+    padding: 8px 0;
+    text-align: center;
+    text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.2);
 }
 
-.year {
-  color: #E8E8E8;
-  float: left;
-  font-weight: bold;
+table.calendar thead th.arrow:first-child {
+    border-left: 1px solid #ac2826;
+    text-align: right;
 }
 
-
-.month-color {
-  color: #27AE60;
-}
-.month-hover:hover{
-  color:#27e879 !important;
+table.calendar thead th.arrow:last-child {
+    border-right: 1px solid #ac2826;
+    text-align: left;
 }
 
-.months {
-  color: #AAAAAA;
-  position: relative;
-  word-spacing: 5%;
+table.calendar thead th.arrow a {
+    color: white;
+    font-family: 'MS Gothic';
 }
 
-.month-line {
-  border-color: #E8E8E8;
-  position: relative;
-  width: 57%;
+table.calendar thead th.arrow a:hover { color: #333333 }
+
+table.calendar tbody th {
+    -webkit-box-shadow: inset 0 1px 0 0 white;
+    -moz-box-shadow: inset 0 1px 0 0 white;
+    -ms-box-shadow: inset 0 1px 0 0 white;
+    -o-box-shadow: inset 0 1px 0 0 white;
+    box-shadow: inset 0 1px 0 0 white;
+    background-color: #f5f5f5;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f5f5f5), color-stop(100%, #e8e8e8));
+    background-image: -webkit-linear-gradient(top, #f5f5f5, #e8e8e8);
+    background-image: -moz-linear-gradient(top, #f5f5f5, #e8e8e8);
+    background-image: -ms-linear-gradient(top, #f5f5f5, #e8e8e8);
+    background-image: -o-linear-gradient(top, #f5f5f5, #e8e8e8);
+    background-image: linear-gradient(top, #f5f5f5, #e8e8e8);
+    border-bottom: 1px solid #d4d4d4;
+    color: #666666;
+    font-size: 7.5pt;
+    font-weight: normal;
+    padding: 4px 0;
+    text-align: center;
+    text-shadow: 0 1px 0 #ffffff;
+    text-transform: uppercase;
+    width: 34px;
 }
 
-.days {
-	font-size: 8pt;
-  color: #AAAAAA;
-  position: relative;
-  font-weight: 60;
-  float: right;
-  width: 53	%;
+table.calendar tbody th:first-child { border-left: 1px solid #abb6bf }
+
+table.calendar tbody th:last-child { border-right: 1px solid #abb6bf }
+
+table.calendar tbody td {
+    background-color: #fcfdfd;
+    border-bottom: 1px solid #e2e2e2;
+    border-left: 1px solid #e2e2e2;
+    color: #444444;
+    font-size: 11pt;
+    font-weight: bold;
+    height: 27px !important;
+    padding: 0;
+    text-align: center;
+    width: 34px;
 }
 
-.num-dates {
-  float: right;
-  position: relative;
-  background-color: #aabedd;
+table.calendar tbody td.today {
+    background-color: #f5f5f5;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f5f5f5), color-stop(100%, #e8e8e8));
+    background-image: -webkit-linear-gradient(top, #f5f5f5, #e8e8e8);
+    background-image: -moz-linear-gradient(top, #f5f5f5, #e8e8e8);
+    background-image: -ms-linear-gradient(top, #f5f5f5, #e8e8e8);
+    background-image: -o-linear-gradient(top, #f5f5f5, #e8e8e8);
+    background-image: linear-gradient(top, #f5f5f5, #e8e8e8);
+    border-left: 1px solid #c4c4c2;
+    border-bottom: 1px solid #c4c4c2;
 }
 
-.week {
-  word-spacing: 5px;
+table.calendar tbody td.last-week { border-bottom: 1px solid #c4c4c2 }
+
+table.calendar tbody td.tomorrow { border-left: 1px solid #c4c4c2 }
+
+table.calendar tbody td.off { color: #d8dbde }
+
+table.calendar tbody td:last-child { border-right: 1px solid #abb6bf }
+
+table.calendar tbody td:first-child { border-left: 1px solid #abb6bf }
+
+table.calendar tbody td:not(:last-child) {
+    -webkit-box-shadow: inset -1px 0 0 0 #eeefef;
+    -moz-box-shadow: inset -1px 0 0 0 #eeefef;
+    -ms-box-shadow: inset -1px 0 0 0 #eeefef;
+    -o-box-shadow: inset -1px 0 0 0 #eeefef;
+    box-shadow: inset -1px 0 0 0 #eeefef;
 }
 
-
-.active-day {
-  border-radius: 50%;
-  background-color: #2ECC71;
-  position: relative;
+table.calendar tbody td:not(:last-child).today {
+    -webkit-box-shadow: inset -1px 0 0 0 #d8d8d7;
+    -moz-box-shadow: inset -1px 0 0 0 #d8d8d7;
+    -ms-box-shadow: inset -1px 0 0 0 #d8d8d7;
+    -o-box-shadow: inset -1px 0 0 0 #d8d8d7;
+    box-shadow: inset -1px 0 0 0 #d8d8d7;
 }
 
-.white {
-  color: white;
+table.calendar tbody td.event { position: relative }
+
+table.calendar tbody td.event:after {
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 1px 0 0 #e88486;
+    -moz-box-shadow: inset 0 1px 0 0 #e88486;
+    -ms-box-shadow: inset 0 1px 0 0 #e88486;
+    -o-box-shadow: inset 0 1px 0 0 #e88486;
+    box-shadow: inset 0 1px 0 0 #e88486;
+    background-color: #e56568;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e56568), color-stop(100%, #bd3f41));
+    background-image: -webkit-linear-gradient(top, #e56568, #bd3f41);
+    background-image: -moz-linear-gradient(top, #e56568, #bd3f41);
+    background-image: -ms-linear-gradient(top, #e56568, #bd3f41);
+    background-image: -o-linear-gradient(top, #e56568, #bd3f41);
+    background-image: linear-gradient(top, #e56568, #bd3f41);
+    position: absolute;
+    right: 2px;
+    bottom: 2px;
+    border: 1px solid #ac2826;
+    content: " ";
+    display: block;
+    height: 4px;
+    width: 4px;
 }
-
-.two {
-  position: relative;
-}
-
-.grey {
-  color: #2d3451;
-}
-
-.calendar-left {
-  border-radius: 20px 0px 0px 20px;
-  background-color: #2ECC79;
-  width: 40%;
-  color: white;
-  float: left;
-}
-
-.day {
-  width: 50%;
-  float: left;
-}
-
-.current-events {
-  width: 100%;
-  float: left;	
-}
-
-
